@@ -4,6 +4,7 @@
 * Add - Download deposits report in CSV.
 * Fix - Use store currency on analytics leaderboard when Multi-Currency is enabled.
 * Fix - Enabled currencies modal UI.
+* Fix - User order currency format on admin refund button.
 
 = 2.9.1 - 2021-09-07 =
 * Fix - Error while checking out with UPE when fields are hidden.
